# lv_port_linux

./: CMakeLists.txt  lv_conf.h
src/: main.backup.c
src/lib/indev_backends/: evdev.c
src/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
src/ui/components/: ui_comp_hook.c
src/ui/screens/: ui_Screen3.c  ui_Screen3.h
